# moio_greenfield

./: .gitignore  Readme.md  communications_app_design.md  communications_migration_plan.md  docker-compose.bak  docker-compose.local.yml  documento_plataforma_moio.md  local_commands.txt  manage.py  package.json  replit.md  shopify.app.toml
backend/: Aptfile  Dockerfile  Procfile  celery_healthcheck.py  hypercorn_config.py  hypercorn_dev.py  hypercorn_dev.toml  manage.py  requirements.txt  version.txt
desktop-agent-console/: Dockerfile.backend  README.md  animales.csv  config.toml  docker-compose.db.yml  docker-compose.local-stack.yml  email_contact_script.py  moio_api_schema.yaml  moio_openapi_schema.json  pyproject.toml  requirements.txt
desktop-agent-console/docs/plugins/: PLUGIN_AUTHORING.md
desktop-agent-console/docs/sprints/: README.md  api_headless_contract.md  crm_integrations_module.md  per-user-agents.md  plugins.md
desktop-agent-console/tests/: test_crm_v2_api.py  test_greenfield_headless_api.py  test_plugin_user_assignment.py  test_plugins.py  test_session_store.py  test_standalone_backend_auth.py  test_standalone_backend_profiles.py  test_standalone_backend_queue.py  test_tool_registry_api_context.py
docs/: DESKTOP_AGENT_CONSOLE_MOCK_PREVIEW.md  MOIO_CRM_JANUARY_2026.md  agent-console-ui-reorganization-plan.md  integrations_hub_new_integration.md  plan_rls_and_endpoints_long_term.md  platform_config_migration.md  shopify_setup.md  system.md  tenancy_migration_plan.md  tenant_admin_api_missing.md  tenant_admin_runtime_integration_plan.md
(+1556 files in other folders)
